# final_project_mlops88

./: .gitignore  LICENSE  Makefile  README.md  all_image_data.dvc  data.py  main.py  model.py  model_test.py  pyproject.toml  requirements.txt  testing.py  training.py
.dvc/: config
.github/workflows/: requirements.txt  tests.yml
conf/: config_test.yaml  config_train.yaml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops88_ezCNNs/: __init__.py  make_dataset.py  predict_model.py  train_model.py
mlops88_ezCNNs/data/: make_dataset.py
mlops88_ezCNNs/models/: model.py
reports/: README.md
tests/: donttest_data.py  test_dvc.py  test_model.py
